--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </span>
             <ul class="dropdown__menu">
               <li>
-                <a class="dropdown__link" href="products-minipod.html">
+                <a class="dropdown__link" href="pages/products-minipod.html">
                   <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                   <div class="dropdown__text">
                     <h5>Minipod Container
@@ -93,7 +93,7 @@
 
             </ul>
           </li>
-          <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
+          <li><a class="navbar__link" href="pages/contact.html">Contact Us</a></li>
           </li>
         </ul>
         <button class="navbar__hamburger" aria-controls="navbar__links" aria-expanded="false" href="home.html">
@@ -282,14 +282,14 @@
             offering.
           </p>
           <div class="flex gap--sm">
-            <a class="btn btn--primary" href="products-minipod.html">Products
+            <a class="btn btn--primary" href="pages/products-minipod.html">Products
               <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
               </svg>
             </a>
-            <a class="btn btn--tertiary" href="contact.html">Contact Sales
+            <a class="btn btn--tertiary" href="pages/contact.html">Contact Sales
               <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
@@ -323,7 +323,7 @@
           <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
-        <a href="products-minipod.html" class="btn btn--primary btn--as-c">Minipod Info
+        <a href="pages/products-minipod.html" class="btn btn--primary btn--as-c">Minipod Info
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -351,7 +351,7 @@
                 Unit (SPDU)
               </span> that comes along with it. The SPDU and its user interface give you the power to control numerous
               pricing to customize your Minipod and miners.</p>
-            <a href="products-minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron"
+            <a href="pages/products-minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron"
                 width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -377,7 +377,7 @@
                 data</span> for you to monitor every event that
               occurs. Determine the time period you want to analyze and never miss anything.
             </p>
-            <a href="products-minipod.html" class="btn btn--primary">Products <svg class="btn__chevron" width="13"
+            <a href="pages/products-minipod.html" class="btn btn--primary">Products <svg class="btn__chevron" width="13"
                 height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -402,7 +402,7 @@
               that occurs with your Minipod and your miners. <span class="text--emphasis text--light-blue">Receive
                 simple and clear emails</span> when such events happen.
             </p>
-            <a href="products-minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron"
+            <a href="pages/products-minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron"
                 width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -695,8 +695,8 @@
           </p>
           <h2 class="income__heading">PLUG & PLAY<br><span class="income__passive">PASSIVE INCOME</span></h2>
         </div>
-        <a href="products-minipod.html" onmousedown="plugInMobile()" onmouseenter="plugIn()" onmouseleave="plugOut()"
-          class="income__btn btn btn--primary">Get Started
+        <a href="pages/products-minipod.html" onmousedown="plugInMobile()" onmouseenter="plugIn()"
+          onmouseleave="plugOut()" class="income__btn btn btn--primary">Get Started
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" />
@@ -722,14 +722,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="pages/products-minipod.html" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
+            <li><a href="pages/products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="pages/contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -739,8 +739,10 @@
           <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
+              src="images/icons/icon_instagram.svg" alt="Instagram Logo Icon"></a>
+          <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
+              src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
         </div>
       </div>
     </div>
