--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,10 +9,10 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.min.css?v=1.0.6">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.0.6">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/../images/favicon.ico" type="image/x-icon">
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
 
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
+        <a href="../index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
           <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
             <g>
               <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -50,7 +50,7 @@
         </a>
         <ul class="navbar__links" data-visible="false">
           <li class="navbar__overlay"></li>
-          <li><a href="index.html" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
+          <li><a href="../index.html" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
               <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
                 <g>
                   <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -72,7 +72,7 @@
             <ul class="dropdown__menu">
               <li>
                 <a class="dropdown__link" href="products-minipod.html">
-                  <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
+                  <img class="icon--md" src="../images/icons/icon_minipod.svg" alt="Minipod Icon">
                   <div class="dropdown__text">
                     <h5>Minipod Container
                       <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -116,7 +116,7 @@
         </div>
       </div>
       <div class="hero__img">
-        <img src="images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
+        <img src="../images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
       </div>
     </section>
     <section class="form container">
@@ -481,7 +481,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="index.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+          <a href="index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -508,8 +508,10 @@
           <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
+              src="../images/icons/icon_instagram.svg" alt="Instagram Logo Icon"></a>
+          <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
+              src="../images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
         </div>
       </div>
     </div>
