--- a/pages/products-minipod.html
+++ b/pages/products-minipod.html
@@ -9,7 +9,7 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.min.css?v=1.0.6">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.0.6">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -36,7 +36,7 @@
   <header class="header">
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
+        <a href="../index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
           <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
             <g>
               <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -50,7 +50,7 @@
         </a>
         <ul class="navbar__links" data-visible="false">
           <li class="navbar__overlay"></li>
-          <li><a href="index.html" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
+          <li><a href="../index.html" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
               <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
                 <g>
                   <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -72,7 +72,7 @@
             <ul class="dropdown__menu">
               <li>
                 <a class="dropdown__link" href="products-minipod.html">
-                  <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
+                  <img class="icon--md" src="../images/icons/icon_minipod.svg" alt="Minipod Icon">
                   <div class="dropdown__text">
                     <h5>Minipod Container
                       <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -329,7 +329,7 @@
     <section id="specifications" class="card-grid">
       <div class="card-1 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_power.svg" alt="Power Input Icon">
+          <img class="icon--md" src="../images/icons/icon_power.svg" alt="Power Input Icon">
           <h6>Power Input</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -341,7 +341,7 @@
       </div>
       <div class="card-2 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_spdu.svg" alt="Smart Power Distribution Icon">
+          <img class="icon--md" src="../images/icons/icon_spdu.svg" alt="Smart Power Distribution Icon">
           <h6>Smart Power Distribution Unit (SPDU)</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -355,7 +355,7 @@
       </div>
       <div class="card-3 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_fan.svg" alt="Air Intake System Icon">
+          <img class="icon--md" src="../images/icons/icon_fan.svg" alt="Air Intake System Icon">
           <h6>Air Intake System</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -368,7 +368,7 @@
       </div>
       <div class="card-4 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_cooling.svg" alt="Cooling System Icon">
+          <img class="icon--md" src="../images/icons/icon_cooling.svg" alt="Cooling System Icon">
           <h6>Cooling System</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -379,7 +379,7 @@
       </div>
       <div class="card-5 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_mining.svg" alt="Mining Capacity Icon">
+          <img class="icon--md" src="../images/icons/icon_mining.svg" alt="Mining Capacity Icon">
           <h6>Mining Capacity</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -390,7 +390,7 @@
       </div>
       <div class="card-6 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_security.svg" alt="Enhanced Security Icon">
+          <img class="icon--md" src="../images/icons/icon_security.svg" alt="Enhanced Security Icon">
           <h6>Enhanced Security</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -400,7 +400,7 @@
         </ul>
       </div>
       <div class="card-7 card__secondary flex ai-c gap--md">
-        <img class="icon--md" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+        <img class="icon--md" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
         <h6>Total Capacity</h6>
         <h6 class="text--blue">300kW</h6>
       </div>
@@ -414,7 +414,7 @@
         </svg>
       </a>
       <div class="card-9 card__secondary flex ai-c gap--md">
-        <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+        <img class="icon--md" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
         <h6>Approx. Cost</h6>
         <h6 class="text--blue">$39,999 - $45,500</h6>
       </div>
@@ -430,8 +430,8 @@
           4X ventilation fan, ATMS and awning-based intake system.
         </p>
         <div class="minipod__illustrations">
-          <img src="images/illustrations/minipod-front_with-text.svg" alt="Minipod Illustration Front Side">
-          <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
+          <img src="../images/illustrations/minipod-front_with-text.svg" alt="Minipod Illustration Front Side">
+          <img src="../images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
       </div>
@@ -448,22 +448,22 @@
 
         <div class="flex flex-col gap--xlg mtop--xxl">
           <div class="minipod__set gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="images/illustrations/minipod-1unit.svg"
+            <img class="minipod__set-img" src="../images/illustrations/minipod-1unit.svg"
               alt="Minipod Single Unit Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>Single Unit</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <img class="icon--sm" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">300kW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <img class="icon--sm" src="../images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">4 Set or higher</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <img class="icon--sm" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$39,999 - $45,500</h6>
               </div>
@@ -471,22 +471,22 @@
           </div>
 
           <div class="minipod__set gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="images/illustrations/minipod-3set.svg"
+            <img class="minipod__set-img" src="../images/illustrations/minipod-3set.svg"
               alt="Minipod 3 Unit Set Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>3 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <img class="icon--sm" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">900kW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <img class="icon--sm" src="../images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">4 Set or higher</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <img class="icon--sm" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$113,997 - $130,500</h6>
               </div>
@@ -494,22 +494,22 @@
           </div>
 
           <div class="minipod__set gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="images/illustrations/minipod-4set.svg"
+            <img class="minipod__set-img" src="../images/illustrations/minipod-4set.svg"
               alt="Minipod 4 Unit Set Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>4 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <img class="icon--sm" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">1.2MW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <img class="icon--sm" src="../images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Included</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <img class="icon--sm" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$167,500 - 190,899</h6>
               </div>
@@ -517,22 +517,22 @@
           </div>
 
           <div class="minipod__set minipod__set-6 gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="images/illustrations/minipod-6set.svg"
+            <img class="minipod__set-img" src="../images/illustrations/minipod-6set.svg"
               alt="Minipod 6 Unit Set Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>6 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <img class="icon--sm" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">1.8MW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <img class="icon--sm" src="../images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Included</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <img class="icon--sm" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$250,500 - 291,999</h6>
               </div>
@@ -540,22 +540,22 @@
           </div>
 
           <div class="minipod__set minipod__set-8 gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="images/illustrations/minipod-8set.svg"
+            <img class="minipod__set-img" src="../images/illustrations/minipod-8set.svg"
               alt="Minipod 8 Unit Set Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>8 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <img class="icon--sm" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">2.4MW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <img class="icon--sm" src="../images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Included</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <img class="icon--sm" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$310,500 - 356,999</h6>
               </div>
@@ -580,7 +580,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="index.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+          <a href="index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -607,8 +607,10 @@
           <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
+              src="../images/icons/icon_instagram.svg" alt="Instagram Logo Icon"></a>
+          <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
+              src="../images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
         </div>
       </div>
     </div>
