--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -36,7 +36,7 @@
 
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
+        <a href="../index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
           <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
             <g>
               <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -50,7 +50,7 @@
         </a>
         <ul class="navbar__links" data-visible="false">
           <li class="navbar__overlay"></li>
-          <li><a href="index.html" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
+          <li><a href="../index.html" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
               <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
                 <g>
                   <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -71,7 +71,7 @@
             </span>
             <ul class="dropdown__menu">
               <li>
-                <a class="dropdown__link" href="products-minipod.html">
+                <a class="dropdown__link" href="pages/products-minipod.html">
                   <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                   <div class="dropdown__text">
                     <h5>Minipod Container
@@ -89,7 +89,7 @@
               </li>
             </ul>
           </li>
-          <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
+          <li><a class="navbar__link" href="pages/contact.html">Contact Us</a></li>
         </ul>
         <button class="navbar__hamburger" aria-controls="navbar__links" aria-expanded="false" href="home.html">
           <span class="sr-only">Menu</span>
@@ -127,7 +127,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="index.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+          <a href="../index.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -137,14 +137,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="pages/products-minipod.html" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
+            <li><a href="pages/products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="pages/contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
