--- a/minipod.html
+++ b/minipod.html
@@ -88,7 +88,7 @@
             </svg>
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-            <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
+            <a class="dropdown__menu-item dropdown__link" href="contact" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
@@ -106,7 +106,7 @@
           </div>
         </li>
         <li>
-          <a class="navbar__link" href="contact.html">Contact Us</a>
+          <a class="navbar__link" href="contact">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -417,7 +417,7 @@
         <h6>Total Capacity</h6>
         <h6 class="text--blue">300kW</h6>
       </div>
-      <a href="contact.html" class="card-8 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
+      <a href="contact" class="card-8 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -575,7 +575,7 @@
             </div>
           </div>
         </div>
-        <a href="contact.html" class="btn btn--primary mtop--xxl mbot--lg">Contact Sales
+        <a href="contact" class="btn btn--primary mtop--xxl mbot--lg">Contact Sales
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -602,14 +602,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="contact" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
+            <li><a href="contact" class="footer__list-item">Products</a></li>
+            <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
