--- a/thanks.html
+++ b/thanks.html
@@ -88,7 +88,7 @@
             </svg>
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-            <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
+            <a class="dropdown__menu-item dropdown__link" href="contact" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
@@ -106,7 +106,7 @@
           </div>
         </li>
         <li>
-          <a class="navbar__link" href="contact.html">Contact Us</a>
+          <a class="navbar__link" href="contact">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -147,14 +147,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="contact" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
+            <li><a href="contact" class="footer__list-item">Products</a></li>
+            <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
