--- a/contact.html
+++ b/contact.html
@@ -509,7 +509,7 @@
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="contact" class="footer__list-item">Products</a></li>
+            <li><a href="minipod" class="footer__list-item">Products</a></li>
             <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
