--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="contact" class="footer__list-item">Minipod</a></li>
+            <li><a href="minipod" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
